
	* bin/cygport.in (unpack):
	Handle all files which aren't archives nor GPG sigs with cp -t.
	Provide a default SRC_DIR of ${P}.

	* bin/cygport.in (cygconf, cyginstall),
	  lib/gnome2.cygclass (gnome2_compile):
	Change default localstatedir to /var.
	Override to /var/lib in gnome2 for scrollkeeper compatibility.

	* bin/cygport.in (src_prep, pkg_srcpkg):
	Don't include 0-byte .src.patch in source package.
	Don't assume any patches are actually present.
	Drop support for g-b-s unified patches.

	* bin/cygport.in (gpg_verify, unpack, src_prep):
	Accept .asc and .sign extensions for source GPG signatures.

	* configure.ac:
	Post-release version bump.

*** 0.2.2 ****

	* bin/cygport.in (unpack):
	Support *.pl and *.py scripts.

	* lib/xorg.cygclass (src_compile):
	Don't skip cygautoreconf with xorg-docs.

	* bin/cygport.in (pkg_pkgcheck):
	Properly check where there are both missing and duplicate files.

	* bin/cygport.in (src_test, pkg_diff):
	Support GNUmakefile.{am,in} files.

	* lib/kde3.cygclass (kde3_compile):
	Add --disable-rpath to configure options.
	Add --disable-pie to configure options.
	Export DO_NOT_COMPILE.

	* lib/xorg.cygclass:
	Accept package-defined ORIG_PN.

	* lib/xorg.cygclass (xorg_compile):
	Add -DX_LOCALE to CPPFLAGS.

	* Makefile.am,
	  doc/Makefile.am,
	  test/Makefile.am,
	  test/bootstrap:
	Fixed *clean make targets.

	* lib/perl.cygclass (perl_compile):
	Don't pass --prefix /usr to Build.PL after all.

	* README:  Various updates.

	* lib/gst-plugins.cygclass (gst_plugins_autoreconf):
	GStreamer tarballs include autogen.sh, so use it instead.
	Add files generated by autogen.sh to DIFF_EXCLUDES.

	* lib/ruby.cygclass (ruby_compile, ruby_install):
	Accept arguments and pass them to appropriate commands.

	* lib/gst-plugins.cygclass (gst_plugins_autoreconf):
	Use gnome2_autoreconf to avoid breaking po/Makefile.in.in.

	* bin/cygport.in (verbose, cygconf),
	  lib/cvs.cygclass (cvs_unpack),
	  lib/gnome2.cygclass (gnome2_autoreconf),