@@ -1,23 +1,25 @@
 cygclassdir = $(pkglibdir)/lib
 
-dist_cygclass_DATA = 		\
-	cvs.cygclass			\
-	distutils.cygclass		\
-	emacs.cygclass			\
-	font.cygclass			\
-	fox.cygclass			\
-	gnome.org.cygclass		\
-	gnome2.cygclass			\
-	gst-plugins.cygclass	\
-	gtk2-perl.cygclass		\
-	gtkmm.cygclass			\
-	kde3.cygclass			\
-	perl.cygclass			\
-	pygtk.cygclass			\
-	python.cygclass			\
-	qt3.cygclass			\
-	ruby.cygclass			\
-	ruby-gnome2.cygclass	\
-	svn.cygclass			\
-	utils.cygclass			\
+dist_cygclass_DATA = 			\
+	cvs.cygclass				\
+	distutils.cygclass			\
+	emacs.cygclass				\
+	font.cygclass				\
+	fox.cygclass				\
+	gnome.org.cygclass			\
+	gnome2.cygclass				\
+	gst-plugins.cygclass		\
+	gst-plugins0.8.cygclass		\
+	gst-plugins0.10.cygclass	\
+	gtk2-perl.cygclass			\
+	gtkmm.cygclass				\
+	kde3.cygclass				\
+	perl.cygclass				\
+	pygtk.cygclass				\
+	python.cygclass				\
+	qt3.cygclass				\
+	ruby.cygclass				\
+	ruby-gnome2.cygclass		\
+	svn.cygclass				\
+	utils.cygclass				\
 	xorg.cygclass
